--- a/gmoDisableURL/package.json
+++ b/gmoDisableURL/package.json
@@ -12,7 +12,6 @@
     "name": "ebs-uchimura",
     "email": "uchimura@ebisu-do.jp"
   },
-  "license": "MIT",
   "dependencies": {
     "@types/node": "^20.19.6",
     "axios": "^1.10.0",
@@ -25,5 +24,6 @@
   },
   "devDependencies": {
     "@types/node-cron": "^3.0.11"
-  }
+  },
+  "license": "GPL-3.0"
 }
