--- a/gmopayServer/package.json
+++ b/gmopayServer/package.json
@@ -12,7 +12,6 @@
     "name": "ebs-uchimura",
     "email": "uchimura@ebisu-do.jp"
   },
-  "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -27,5 +26,6 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/urlsafe-base64": "^1.0.31"
-  }
+  },
+  "license": "GPL-3.0"
 }
